fixing alignment of input file element

--- a/src/components/SubmitEvent/SubmitEvent.css
+++ b/src/components/SubmitEvent/SubmitEvent.css
@@ -39,6 +39,7 @@ body {
     justify-content: center;
     align-items: center;
     color: rgb(83, 57, 57);
+    font-size: 1.5rem;
 }
 
 .content-bottom {
@@ -55,9 +56,10 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
+    
 }
 .submit-descr {
+    margin-top: 30px;
     padding: 30px;
     width: 90%;
     font-size: 1.4rem;
@@ -104,6 +106,9 @@ body {
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     border-radius: 4px;
     text-indent: 10px;
+}
+input[type="file"] {
+    padding: 10px
 }
 input::placeholder {
     font-size: 1.2rem;
